--- a/reach.html
+++ b/reach.html
@@ -50,9 +50,9 @@
                     <textarea class="typeset2" name="message" placeholder="Please state the details about your file submission." required></textarea><br>
                     <button type="submit" class="submitbutton">Submit</button>
                     <input type="hidden" name="_template" value="basic">
-                    <input type="hidden" name="_subject" value="Inquiry (The GL Instructions)">
+                    <input type="hidden" name="_subject" value="File Submission (The GL Instructions)">
                     <input type="hidden" name="_url" value="https://gladyslacia.github.io/consultation.html">
-                    <input type="hidden" name="_autoresponse" value="Link for ranking of grades is not yet available as of now.">
+                    <input type="hidden" name="_autoresponse" value="Submission recieved.">
                 </form>
             </div>
             <div class="submitmail2">
@@ -64,9 +64,9 @@
                     <textarea class="typeset22" name="message" placeholder="Please state the details about your file submission." required></textarea><br>
                     <button type="submit" class="submitbutton">Submit</button>
                     <input type="hidden" name="_template" value="basic">
-                    <input type="hidden" name="_subject" value="Inquiry (The GL Instructions)">
+                    <input type="hidden" name="_subject" value="File Submission (The GL Instructions)">
                     <input type="hidden" name="_url" value="https://gladyslacia.github.io/consultation.html">
-                    <input type="hidden" name="_autoresponse" value="Link for ranking of grades is not yet available as of now.">
+                    <input type="hidden" name="_autoresponse" value="Submission recieved.">
                 </form>
             </div>
         </section>
