--- a/reach.html
+++ b/reach.html
@@ -51,7 +51,7 @@
                     <button type="submit" class="submitbutton">Submit</button>
                     <input type="hidden" name="_template" value="basic">
                     <input type="hidden" name="_subject" value="File Submission (The GL Instructions)">
-                    <input type="hidden" name="_url" value="https://gladyslacia.github.io/consultation.html">
+                    <input type="hidden" name="_url" value="https://gladyslacia.github.io/reach.html">
                     <input type="hidden" name="_autoresponse" value="Submission recieved.">
                 </form>
             </div>
@@ -65,7 +65,7 @@
                     <button type="submit" class="submitbutton">Submit</button>
                     <input type="hidden" name="_template" value="basic">
                     <input type="hidden" name="_subject" value="File Submission (The GL Instructions)">
-                    <input type="hidden" name="_url" value="https://gladyslacia.github.io/consultation.html">
+                    <input type="hidden" name="_url" value="https://gladyslacia.github.io/reach.html">
                     <input type="hidden" name="_autoresponse" value="Submission recieved.">
                 </form>
             </div>
