--- a/materials.html
+++ b/materials.html
@@ -21,7 +21,7 @@
                     <li onclick="home()">Home</li>
                     <li onclick="consultation()">Consultation</li>
                     <li onclick="reach()">Reach</li>
-                    <li onclick="materials()" class="active1">Instructional Materials</li>
+                    <li onclick="materials()" class="active1">Instructional Resources</li>
                 </ul>
             </nav>
         </header>
