--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="google-site-verification" content="2tLOIrcsBoxIOfSh1JB7jJbub9I-Ndj_V2v9b2QzBx8" />
+        <meta name="referrer" content="strict-origin-when-cross-origin">
+
+        <meta property="og:title" content="The GL Instructions">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://gladyslacia.github.io/">
+        <meta property="og:description" content="The Gladys Lacia Instructional Website">
+
+        <meta itemprop="name" content="The GL Instructions">
+        <meta itemprop="description" content="The Gladys Lacia Instructional Website">
+        <meta itemprop="url" content="https://gladyslacia.github.io/">
+        <meta itemprop="thumbnailUrl" content="https://gladyslacia.github.io/backend/gl-favicon.jpg">
+        <meta itemprop="image" content="https://gladyslacia.github.io/backend/gl-favicon.jpg">
+        <meta itemprop="imageUrl" content="https://gladyslacia.github.io/backend/gl-favicon.jpg">
+
+        <meta property="og:image" content="https://gladyslacia.github.io/backend/gl-favicon.jpg">
 
         <title>The GL Instructions</title>
 
