--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <meta itemprop="name" content="The GL Instructions">
         <meta itemprop="description" content="The Gladys Lacia Instructional Website">
         <meta itemprop="url" content="https://gladyslacia.github.io/">
-        <meta itemprop="thumbnailUrl" content="https://gladyslacia.github.io/for.gl.instructions/gl-favicon.jpg">
-        <meta itemprop="image" content="https://gladyslacia.github.io/for.gl.instructions/gl-favicon.jpg">
-        <meta itemprop="imageUrl" content="https://gladyslacia.github.io/for.gl.instructions/gl-favicon.jpg">
+        <meta itemprop="thumbnailUrl" content="cssjs/gl-favicon.jpg">
+        <meta itemprop="image" content="cssjs/gl-favicon.jpg">
+        <meta itemprop="imageUrl" content="cssjs/gl-favicon.jpg">
 
-        <meta property="og:image" content="https://gladyslacia.github.io/for.gl.instructions/gl-favicon.jpg">
+        <meta property="og:image" content="cssjs/gl-favicon.jpg">
 
         <title>The GL Instructions</title>
 
         <!-- Favicon -->
-        <link href="https://gladyslacia.github.io/for.gl.instructions/gl-favicon.jpg" rel="icon">
+        <link href="cssjs/gl-favicon.jpg" rel="icon">
 
         <!-- Style and Function -->
-        <link href="https://gladyslacia.github.io/for.gl.instructions/style.css" rel="stylesheet">
-        <script src="https://gladyslacia.github.io/for.gl.instructions/function.js"></script>
+        <link href="cssjs/style.css" rel="stylesheet">
+        <script src="cssjs/function.js"></script>
     </head>
     <body>
         <header class="headermain">
