--- a/reviewers.html
+++ b/reviewers.html
@@ -67,7 +67,7 @@
             </div>
             <div class="reviewerfiles">
                 <br><em>You can only see this if your password is correct.</em><br><br>
-                <iframe src="https://gladyslacia.github.io/backend/gl-favicon.jpg" id="reviewerfilesid" frameborder="0"></iframe>
+                <iframe src="cssjs/gl-favicon.jpg" id="reviewerfilesid" frameborder="0"></iframe>
             </div>
         </section>
     </body>
