--- a/googleclassroom.html
+++ b/googleclassroom.html
@@ -66,31 +66,31 @@
                 <em id="alert">Enter password!</em>
             </div>
             <div class="subjects">
-                <h2>Inquries, Investigation and Immersion</h2>
+                <h2>Econ 6: Econometrics</h2>
                 <ul>
                     <li>&#x2713; <u id="joinalert1">You can see the code only if you enter the correct password.</u></li>
                 </ul>
             </div>
             <div class="subjects">
-                <h2>Inquries, Investigation and Immersion</h2>
+                <h2>Research 4: Introduction to Research Analysis</h2>
                 <ul>
                     <li>&#x2713; <u id="joinalert2">You can see the code only if you enter the correct password.</u></li>
                 </ul>
             </div>
             <div class="subjects">
-                <h2>Inquries, Investigation and Immersion</h2>
+                <h2>Research 5: Qualitative and Quantitative Analysis of Data</h2>
                 <ul>
                     <li>&#x2713; <u id="joinalert3">You can see the code only if you enter the correct password.</u></li>
                 </ul>
             </div>
             <div class="subjects">
-                <h2>Inquries, Investigation and Immersion</h2>
+                <h2>General Mathematics</h2>
                 <ul>
                     <li>&#x2713; <u id="joinalert4">You can see the code only if you enter the correct password.</u></li>
                 </ul>
             </div>
             <div class="subjects">
-                <h2>Inquries, Investigation and Immersion</h2>
+                <h2>Basic Calculus</h2>
                 <ul>
                     <li>&#x2713; <u id="joinalert5">You can see the code only if you enter the correct password.</u></li>
                 </ul>
