--- a/googleclassroom.html
+++ b/googleclassroom.html
@@ -58,7 +58,7 @@
             </div>
             <div class="classcode">
                 <h2>Class Codes</h2>
-                <em>Join Ms. Lacia's classes in Google Classroom with these password-emcrypted class codes.</em>
+                <em>Join Ms. Lacia's classes in Google Classroom with these password-encrypted class codes.</em>
                 <form action="#" method="GET">
                 <br><input type="text" class="typeset4" placeholder="Password" id="classcodeid">
                 <a class="join-alterbutton" onclick="join()">Join</a>
