--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <textarea class="typeset2" name="message" placeholder="Message" required></textarea><br>
                     <button type="submit" class="inquirybutton">Send</button>
                     <input type="hidden" name="_template" value="basic">
-                    <input type="hidden" name="_subject" value="Inquiry: From emailsubject()">
+                    <input type="hidden" name="_subject" value="">
                     <input type="hidden" name="_url" value="https://gladyslacia.github.io/index.html">
                     <input type="hidden" name="_autoresponse" value="Message recieved. Wait for her reply to this email notification within 24 hours.">
                 </form>
