--- a/github-test-runs/index.html
+++ b/github-test-runs/index.html
@@ -89,7 +89,7 @@
                     <textarea class="typeset3" name="message" placeholder="Message" required></textarea><br>
                     <button type="submit" class="inquirybutton">Send</button>
                     <input type="hidden" name="_template" value="basic">
-                    <input type="hidden" name="_url" value="https://gladyslacia.github.io/index.html">
+                    <input type="hidden" name="_url" value="https://gladyslacia.github.io/github-test-runs/index.html">
                     <input type="hidden" name="_autoresponse" value="Message received. Wait for her reply to this email notification within 24 hours.">
                 </form>
             </div>
