--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
             <div class="inquirymail1">
                 <h2>Send Email to Ms. Lacia for Inquiry</h2>
-                <form action="https://formsubmit.co/emailbox.gl+inquiry@gmail.com" method="POST" onsubmit="inquirymail()" autocomplete="off">
-                    <input type="email" class="typeset1" name="email" placeholder="Your Email" id="emailaddressid" required>
+                <form action="https://formsubmit.co/emailbox.gl+inquiry@gmail.com" method="POST" onsubmit="inquirymail1()" autocomplete="off">
+                    <input type="email" class="typeset1" name="email" placeholder="Your Email" id="emailaddressid1" required>
                     <input type="text" class="typeset1" name="name" placeholder="Given Name, Surname" required><br>
                     <textarea class="typeset2" name="message" placeholder="Message" required></textarea><br>
                     <button type="submit" class="inquirybutton">Send</button>
@@ -93,8 +93,8 @@
             </div>
             <div class="inquirymail2">
                 <h2>Send Email to Ms. Lacia for Inquiry</h2>
-                <form action="https://formsubmit.co/emailbox.gl+inquiry@gmail.com" method="POST" onsubmit="inquirymail()" autocomplete="off">
-                    <input type="email" class="typeset1" name="email" placeholder="Your Email" id="emailaddressid" required><br>
+                <form action="https://formsubmit.co/emailbox.gl+inquiry@gmail.com" method="POST" onsubmit="inquirymail2()" autocomplete="off">
+                    <input type="email" class="typeset1" name="email" placeholder="Your Email" id="emailaddressid2" required><br>
                     <input type="text" class="typeset1" name="name" placeholder="Given Name, Surname" required><br>
                     <textarea class="typeset3" name="message" placeholder="Message" required></textarea><br>
                     <button type="submit" class="inquirybutton">Send</button>
