--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <button type="submit" class="inquirybutton">Send</button>
                     <input type="hidden" name="_template" value="basic">
                     <input type="hidden" name="_url" value="https://gladyslacia.github.io/index.html">
-                    <input type="hidden" name="_autoresponse" value="Message recieved. Wait for her reply to this email notification within 24 hours.">
+                    <input type="hidden" name="_autoresponse" value="Message received. Wait for her reply to this email notification within 24 hours.">
                 </form>
-            </div>
+            </div>                
             <div class="inquirymail2">
                 <h2>Send Email to Ms. Lacia for Inquiry</h2>
                 <form action="https://formsubmit.co/emailbox.gl+inquiry@gmail.com" method="POST" onsubmit="inquirymail2()" autocomplete="off">
@@ -100,9 +100,9 @@
                     <button type="submit" class="inquirybutton">Send</button>
                     <input type="hidden" name="_template" value="basic">
                     <input type="hidden" name="_url" value="https://gladyslacia.github.io/index.html">
-                    <input type="hidden" name="_autoresponse" value="Message recieved. Wait for her reply to this email notification within 24 hours.">
+                    <input type="hidden" name="_autoresponse" value="Message received. Wait for her reply to this email notification within 24 hours.">
                 </form>
-            </div>
+            </div>            
             <div class="history">
                 <h3>About: History of the Website</h3>
                 <p><strong>The Gladys Lacia Instructional Website</strong>
