--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -59,7 +59,7 @@
             <div class="lecturenotes">
                 <h2>Lecture Notes</h2>
                 <em>All lecture notes are encrypted with password.</em>
-                <form action="#" method="GET">
+                <form action="#" method="GET" autocomplete="off">
                 <br><input type="text" class="typeset4" placeholder="Password" id="lecturenotesid">
                 <a class="enter-alterbutton" onclick="enter()">Enter</a>
                 </form><br>
