--- a/reviewers.html
+++ b/reviewers.html
@@ -59,7 +59,7 @@
             <div class="reviewers">
                 <h2>Reviewers</h2>
                 <em>All reviewers are encrypted with password.</em>
-                <form action="#" method="GET">
+                <form action="#" method="GET" autocomplete="off">
                 <br><input type="text" class="typeset4" placeholder="Password" id="reviewersid">
                 <a class="get-alterbutton" onclick="get()">Get</a>
                 </form><br>
