--- a/googleclassroom.html
+++ b/googleclassroom.html
@@ -59,7 +59,7 @@
             <div class="classcode">
                 <h2>Class Codes</h2>
                 <em>Join Ms. Lacia's classes in Google Classroom with these password-encrypted class codes.</em>
-                <form action="#" method="GET">
+                <form action="#" method="GET" autocomplete="off">
                 <br><input type="text" class="typeset4" placeholder="Password" id="classcodeid">
                 <a class="join-alterbutton" onclick="join()">Join</a>
                 </form><br>
