--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <meta property="og:image" content="cssjs/gl-favicon.jpg">
 
         <title>The GL Instructions</title>
+        <link rel="canonical" href="https://www.gladyslacia.github.io/">
 
         <!-- Favicon -->
         <link href="cssjs/gl-favicon.jpg" rel="icon">
@@ -30,6 +31,7 @@
         <!-- Style and Function -->
         <link href="cssjs/style.css" rel="stylesheet">
         <script src="cssjs/function.js"></script>
+
     </head>
     <body>
         <header class="headermain">
