--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gladys Lacia</title>
+<link rel="icon" href="favicon.png" type="image/x-icon">
+<meta property="og:image" content="https://gladyslacia.github.io/ogimage.jpg">
 <style>
 body {
 background-color: #FFFFF0;
